updates for HoTTViewer tab